# fastapi_example_api_search

./: .gitignore  Dockerfile  README.md  TODO  docker-compose.dev.yaml  docker-compose.yaml  pyproject.toml
src/: main.py
src/clients/: avia_tickets.py  weathers.py
src/core/: errors_pages_setup.py  master_router.py  paths.py  settings.py
src/core/reference_data/: data_loader.py
src/core/reference_data/jsons/: cities_name_code_coordinates.json
src/core/reference_data/schemas/: city.py
src/core/settings/: app_config.py  secrets.py
src/data/: data_loader.py
src/data/jsons/: aircompanies.json
src/data/schemas/avia_tickets/: aircompany.py  airline.py  airport.py  city.py
src/dependencies/: clients.py  common.py  normalizers.py  services.py
src/exceptions/: avia_tickets.py  weathers.py
src/modules/avia_tickets/: client.py  exceptions.py  router.py  schemas.py  service.py
src/modules/avia_tickets/dependencies/: client.py  normalizer.py  service.py
src/modules/shared/: client.py  exceptions.py  router.py
src/modules/shared/dependencies/: client.py  common.py
src/modules/weathers/: client.py  exceptions.py  router.py  schemas.py  service.py  utils.py
src/modules/weathers/dependencies/: client.py  normalizer.py  service.py
src/routers/: avia_tickets.py  home.py  weathers.py
src/schemas/: avia_tickets.py  base.py
src/services/: avia_tickets.py  weathers.py
src/setup/: errors_pages.py  log_config.py  routes.py
src/utils/: common.py
src/web/static/: script.js  styles.css
src/web/templates/: base.html  index.html  index.html.old
(+5 files in other folders)
